--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -4,9 +4,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-session": "^1.18.0",
     "git-filter-repo": "^0.0.30",
     "jsonwebtoken": "^9.0.2",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^6.9.8",
     "nodemon": "^3.1.10",
     "pg": "^8.15.6",
     "postgres": "^3.4.5",
